--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,26 @@
 <resources>
+    // Registration screen
     <string name="app_name">BudgetBuddy</string>
     <string name="login">Login</string>
     <string name="user_hint">Username</string>
     <string name="password_hint">Password</string>
     <string name="password_confirmation">Confirm password</string>
     <string name="email">Email</string>
+    <string name="signed_up">Already signed up?</string>
+    <string name="log_in_from_register"><u>Click on me to log in!</u></string>
 
-
+    // Login screen
     <string name="remember">Remember me</string>
     <string name="not_signed_up">Not signed up yet?</string>
     <string name="register_from_login"><u>Click on me to register!</u></string>
     <string name="register">Sign up</string>
 
-    <string name="signed_up">Already signed up?</string>
-    <string name="log_in_from_register"><u>Click on me to log in!</u></string>
+    // MainActivity screen
+    <string name="dashboard">Dashboard</string>
+    <string name="monthlyLimit">Spending limit</string>
+    <string name="moneySpent">Spent money</string>
+    <string name="totalTransactions">Transactions</string>
+    <string name="moneySaved">Saved money</string>
+    <string name="None">None</string>
+
 </resources>
