--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,16 @@
     <string name="None">None</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+
+    // Custom Nav Drawer screen
+    <string name="profile">Profile</string>
+    <string name="finances">Finances</string>
+    <string name="spending_limit">Spending limit</string>
+    <string name="graph">Graphs</string>
+    <string name="statistics">Generate statistics</string>
+    <string name="settings">Settings</string>
+    <string name="FAQ">FAQ</string>
+    <string name="about">About us</string>
+    <string name="contact">Contact</string>
+    <string name="copyright">Copyright xxx 20xx-20xx</string>
 </resources>
