added activites for the general statistics and generated statistics where all the pdfs will be shown in a list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="finances">Finances</string>
     <string name="spending_limit">Spending limit</string>
     <string name="graph">Graphs</string>
-    <string name="statistics">Generate statistics</string>
+    <string name="statistics">Generated statistics</string>
     <string name="settings">Settings</string>
     <string name="FAQ">FAQ</string>
     <string name="about">About us</string>
