--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,6 @@
     <string name="about">About us</string>
     <string name="contact">Contact</string>
     <string name="copyright">Copyright xxx 20xx-20xx</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="default_notification_channel_id" />
 </resources>
